--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -6,7 +6,7 @@
     tools:context=".MainFragment">
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/RecyclerView"
+        android:id="@+id/rv_list"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
