--- a/app/src/main/res/menu/refresh.xml
+++ b/app/src/main/res/menu/refresh.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context=".Main" >
     <item android:id="@+id/refresh"
-        android:title="Actualizar"
+        android:title="@string/str_update"
         android:orderInCategory="100"
         app:showAsAction="never" />
 </menu>
